@@ -191,7 +191,7 @@ list options may contain environment markers as defined in `PEP 508
     that should be excluded from an sdist.
 
 **sip-include-dirs**
-    The valus is a list of additional directories that should be searched for
+    The value is a list of additional directories that should be searched for
     :file:`.sip` files.
 
 **sip-module**
@@ -207,6 +207,15 @@ list options may contain environment markers as defined in `PEP 508
     The boolean value enables or disables the display of verbose progress
     messages.  By default verbose progress messages are not displayed.  This is
     also a user option.
+
+**wheel-includes**
+    The values is a list of files and directories, specified as *glob* patterns
+    and relative to the project directory, that should be included in a wheel.
+    If an element of list is a string then it is a pattern and files and
+    directories are installed in the target directory.  If an element is a
+    2-tuple then the first part is the pattern and the # second part is the
+    name of a sub-directory relative to the target directory where the files
+    and directories are installed.
 
 
 Bindings Sections
