@@ -2,6 +2,8 @@ v5.2.0 ??? April 2020
   - Added the 'manylinux' project option to disable the support for 'manylinux'
     part of the platform tag to be used in the name of a wheel.  sip-wheel has
     a corresponding '--no-manylinux' command line option.
+  - Added the 'wheels-include' project option to specify additional files and
+    directories to be included in a wheel.
 
 v5.1.2 3rd April 2020
   - The latest version of the module ABI is v12.7.2.
